--- a/install/sshtunnel.service
+++ b/install/sshtunnel.service
@@ -2,12 +2,13 @@
 # https://www.freedesktop.org/software/systemd/man/bootup.html
 [Unit]
 Description=SSHTunnel
-After=multi-user.target
+After=network-online.target
 
 [Service]
 Type=simple
 ExecStart=/home/pi/apps/sshtunnel/start.sh
 Restart=always
+RestartSec=10
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=network-online.target
